# Meta-OpenEnv-Hackthon-Project

./: Dockerfile  README.md  app.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  scenario_config.json  test_endpoints.py  test_inference_sim.py  test_live.py  test_live2.py  test_phase2.py  test_scores.py
env/: __init__.py  data.py  environment.py  models.py  rubrics.py  tasks.py
